--- a/styles.css
+++ b/styles.css
@@ -95,32 +95,23 @@ div#transcription {
 .zone_moitie {
     float:left;
     width:45vw;
-    /*height:75vh;*/
 }
 
 .zone_elargie {
     float:left;
     width:38vw;
-    /*height:75vh;*/
 }
 
 .zone_tiers {
     float:left;
     width:28vw;
-    /*height:75vh;*/
 }
 
 .zone_ressources {
     float:left;
     width:24vw;
     position: relative;
-    /*height:75vh;*/
 }
-
-/*#resources_view{
-    position: absolute;
-    bottom: 1px;
-}*/
 
 .hauteur_max{
     height: 540px;
@@ -133,7 +124,6 @@ div#transcription {
 }
 
 .horizontally_centered{
-    /*padding: 5px;*/
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -209,7 +199,6 @@ div#transcription {
   text-align:left;
   width:394px;
   z-index:50;
-  /*padding: 25px 25px 20px;*/
   border-radius: 3px;
 }
 
@@ -306,7 +295,6 @@ div#transcription {
 
 .description_ressource{
     text-align: justify;
-    /*margin-bottom: 0px;*/
 }
 
 .overlay{
@@ -343,9 +331,6 @@ div#transcription {
 }
 
 
-
-
-
 .PASTELcontainer{
     width:100%;
     /*max height?*/
@@ -360,11 +345,9 @@ div#transcription {
     width: 20%;
     flex:0 0 auto;
     height:100%;
-    /*margin: auto;*/
 }
 
 .divCentre{
-    /*margin: auto;*/
     flex:1 1 auto;
     height:100%;
 }
@@ -372,7 +355,6 @@ div#transcription {
 .divDroite{
     width: 30%;
     flex:0 0 auto;
-    /*margin: auto;*/
 }
 
 .flexVertical{
@@ -419,13 +401,12 @@ div#transcription {
 
 .scrollRessourcesInside{
     overflow-y: scroll;
-    /*padding-top: 25px;*/
     bottom:0;
     -webkit-box-flex: 1; /* OLD - iOS 6-, Safari 3.1-6 */
     -moz-box-flex: 1; /* OLD - Firefox 19- */
-    -webkit-flex: 1; /* Chrome */
-    -ms-flex: 1; /* IE 10 */
-    flex: 1; /* NEW, */
+    -webkit-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
 }
 
 .diapositive {
